# Parser

./: .gitignore  Cargo.toml  python.py  tmp.txt
cuda/: compile.bat  prelude.cuh  template.cuh
example/: go.bat
example/src/: main.gwh
example/temp/: gwaihir.h  main.cu  native.cuh  out.cuh
src/: ast.rs  lexer.rs  main.rs  parser.rs  parser_gen.rs  parser_old.rs  rust_backend.rs  rustfmt.toml  tokens.rs
src/analysis/: concrete_view.rs  concrete_view_resolution.rs  defs_test.rs  export.rs  mock_defs.rs  mod.rs  parallel_for_checks.rs  scope.rs  statement_types.rs  symbol.rs  topological_sort.rs  type_analysis.rs  type_error.rs  types.rs
src/check/: mod.rs  parallel_for_checks.rs
src/cli/: cli_backend.rs  cuda.rs  mod.rs  win_cl.rs
src/cuda/: array_repr.rs  assignment.rs  ast.rs  backend.rs  code_gen.rs  context.rs  context_test.rs  cuda_backend.rs  cuda_block_gen.rs  declaration.rs  expression.rs  function.rs  function_use_analyser.rs  function_use_analyzer.rs  gwh_str.rs  index_view_repr.rs  integration_tests.rs  kernel.rs  kernel_analysis.rs  kernel_data.rs  mod.rs  parallel_for_variable_use.rs  repr.rs  repr_utils.rs  scalar_repr.rs  sort_by_name.rs  statement.rs  variable.rs  writer.rs  zero_view_repr.rs
src/la/: arith.rs  diophantine.rs  ilp.rs  indexed.rs  matrix.rs  mod.rs  prelude.rs  rat.rs  simplex.rs  vector.rs
src/language/: ast.rs  ast_assignment.rs  ast_expr.rs  ast_function.rs  ast_goto.rs  ast_ifwhile.rs  ast_pfor.rs  ast_return.rs  ast_statement.rs  ast_test.rs  backend.rs  call_tree.rs  compiler.rs  concrete_views.rs  debug_printer.rs  (+27 more)
(+50 files in other folders)
