[package]
name = "parser"
version = "0.1.0"
authors = ["Simon Pohmann <simon@pohmann.de>"]
edition = "2018"

[dependencies]
take_mut = "0.2.2"
itertools = "0.8.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
feanor_la = { git = "https://github.com/feanorTheElf/FeanorLA.git"  }